fixed menu gap, added --title colour to image borders

--- a/app/styles/menu.module.css
+++ b/app/styles/menu.module.css
@@ -1,7 +1,7 @@
 .menuContainer {
   position: fixed;
   z-index: 2;
-  top: 57px;
+  top: 55px;
   left: 0;
   right: 0;
   height: 100%;
