--- a/app/styles/projectDetails.module.css
+++ b/app/styles/projectDetails.module.css
@@ -80,7 +80,7 @@
   width: 100%;
   height: 100%;
   border-radius: 6px;
-  border: 1px solid black;
+  border: 1px solid var(--title);
 }
 
 .infoSeparator {
@@ -91,7 +91,7 @@
   color: var(--title);
 }
 
-@media screen and (width >= 768px) {
+@media screen and (width >=768px) {
   .projectPageImages {
     max-width: 80%;
     gap: 30px;
@@ -109,5 +109,9 @@
   .backButtonDiv {
     position: relative;
     bottom: 0;
+  }
+
+  .imageContainer {
+    height: 85dvh;
   }
 }
